--- a/service.html
+++ b/service.html
@@ -46,71 +46,57 @@
                 }
               </script>
 
-<div class="testimonal-flex">
-<div class="testimonal-dv" style="margin: 0; padding-top: 80px;">  
-    <div class="testimonals slides">
-        <div class="testimonal slide">
-          <img  src="images/img1.jpg" alt="Card image cap">
-          <div class="card-body">
-            <p>"Sina Fashion Design has completely transformed my wardrobe. Their designs are unique and always on trend!"</p>
-            <h4>- Jane Doe</h4>
-          </div>
-        </div>
-        <div class="testimonal slide">
-          <img src="images/img1.jpg" alt="Card image cap">
-          <div class="card-body">
-            <p>"I love the quality and attention to detail in every piece. Sina Fashion Design never disappoints!"</p>
-            <h4>- Jane Doe</h4>
-          </div>
-        </div>
-        <div class="testimonal slide">
-          <img src="images/img3.jpg" alt="Card image cap">
-          <div class="card-body">
-            <p>"The customer service is exceptional, and the clothes are simply stunning. Highly recommend!"</p>
-            <h4>- Jane Doe</h4>
-          </div>
-        </div>
-        <div class="testimonal slide">
-          <img src="images/img4.jpg" alt="Card image cap">
-          <div class="card-body">
-            <p>"The designs are innovative and stylish. I always get compliments when I wear Sina Fashion Design!"</p>
-            <h4>- Emily Johnson</h4>
-          </div>
-        </div>
+
+<div class="our-services" style="padding-top:100px; background-color: white;">
+    <h2>Service We Offer</h2>
+    <div class="service-cards">
+       <div class="service-card">
+         <h3 ><span>Custom Design </span> </h3>
+         <p >We offer bespoke fashion design services tailored to your unique style and preferences.</p>
+       </div>
+       <div class="service-card">
+         <h3><span> Alterations</span> </h3>
+         <p>Our expert tailors provide high-quality alteration services to ensure a perfect fit.</p>
+       </div>
+       <div class="service-card">
+         <h3><span> Personal Styling</span> </h3>
+         <p>Get personalized styling advice from our experienced fashion consultants.</p>
+       </div>
+       <div class="service-card">
+         <h3><span> Fashion Workshops</span> </h3>
+         <p>Join our workshops to learn about the latest trends and fashion design techniques.</p>
+       </div>
+     </div>
+ </div>
+</div>
+
+
+
+<footer>
+    <div class="footer-content">
+      <h3>About Us</h3>
+      <p>At Sina Fashion Design, we are dedicated to bringing you the latest trends and timeless styles. Our mission is to provide high-quality fashion that empowers and inspires.</p>
     </div>
-</div>
-</div>
+    <div class="footer-content">
+      <h3>Contact Us</h3>
+      <p>Email: info@sinafashiondesign.com</p>
+      <p>Phone: +123 456 7890</p>
+      <p>Address: 123 Fashion Street, New York, NY 10001</p>
+    </div>
+    <div class="footer-content">
+      <h3>Follow Us</h3>
+     <a href="https://t.me/kenakondesign"> <p>Telegram </p></a>
+    <a href="https://www.tiktok.com/@gelanebenti"><p>Tiktok</p> </a>
+      <p>Instagram</p>
+      <p>Facebook</p>
+    </div>
+  </footer>
 
-            <footer>
-              <div class="footer-content">
-                <h3>About Us</h3>
-                <p>At Sina Fashion Design, we are dedicated to bringing you the latest trends and timeless styles. Our mission is to provide high-quality fashion that empowers and inspires.</p>
-              </div>
-              <div class="footer-content">
-                <h3>Contact Us</h3>
-                <p>Email: info@sinafashiondesign.com</p>
-                <p>Phone: +123 456 7890</p>
-                <p>Address: 123 Fashion Street, New York, NY 10001</p>
-              </div>
-              <div class="footer-content">
-                <h3>Follow Us</h3>
-               <a href="https://t.me/kenakondesign"> <p>Telegram </p></a>
-              <a href="https://www.tiktok.com/@gelanebenti"><p>Tiktok</p> </a>
-                <p>Instagram</p>
-                <p>Facebook</p>
-              </div>
-            </footer>
-  
+  <div class="footer-bottom">
+  <p>&copy; <span id="current-year"></span> Sina Fashion Design. All rights reserved.</p>
+  </div>
+  <script>
+  document.getElementById('current-year').textContent = new Date().getFullYear();
+  </script>
 
-            <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> Sina Fashion Design. All rights reserved.</p>
-            </div>
-
-
-
-            <script>
-            document.getElementById('current-year').textContent = new Date().getFullYear();
-            </script>
-
-</body>
 </body>
