--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <nav>
                 <ul class="sidebar">
                   <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#products">Products</a></li>
-                  <li><a href="#service">Services</a></li>
-                  <li><a href="#">Testimonals</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="Product.html">Products</a></li>
+                  <li><a href="service.html">Services</a></li>
+                  <li><a href="Testimonals.html">Testimonals</a></li>
+                  <li><a href="Contact.html">Contact</a></li>
                   <li><a href="Blog.html">Blog</a></li>
                 </ul>
                 <img src="images/photo_2025-01-31_04-12-05.jpg" alt="logo photo">
                 <ul>
-                  <li class="hideOnMobile"><a href="#">Home</a></li>
-                  <li class="hideOnMobile"><a href="#">Products</a></li>
-                  <li class="hideOnMobile"><a href="#">Services</a></li>
-                  <li class="hideOnMobile"><a href="#">Testimonals</a></li>
-                  <li class="hideOnMobile"><a href="#">Contact</a></li>
+                  <li class="hideOnMobile"><a href="index.html">Home</a></li>
+                  <li class="hideOnMobile"><a href="Product.html">Products</a></li>
+                  <li class="hideOnMobile"><a href="service.html">Services</a></li>
+                  <li class="hideOnMobile"><a href="Testimonals.html">Testimonals</a></li>
+                  <li class="hideOnMobile"><a href="Contact.html">Contact</a></li>
                   <li class="hideOnMobile"><a href="Blog.html">Blog</a></li>
                 </ul>
-                <button class="hideOnMobile">Shop Now</button>
+              <a href="Contact.html"><button class="hideOnMobile">Shop Now</button></a> 
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>   
               </nav>
             
