--- a/Blog1.html
+++ b/Blog1.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Beauty of Oromo Traditional Attire</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6725304071613794"
+     crossorigin="anonymous"></script>
     
 
 <style>
