--- a/Blog2.html
+++ b/Blog2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Ethiopian Fashion Trends</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6725304071613794"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <article class="blog-post">
