--- a/service.html
+++ b/service.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Discover Sina Fashion Design, your premier destination for authentic Ethiopian cultural clothes, including Oromo attire and modern fashion. Shop now!">
     <meta name="keywords" content="Ethiopian clothing, Oromo cultural clothes, modern Ethiopian fashion, traditional attire, Sina Fashion Design, Uffata Aadaa, Uffannaa Aadaa Oromoo">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6725304071613794"
+     crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
